--- a/Merged - code.ipynb
+++ b/Merged - code.ipynb
@@ -25,10 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 1,
    "id": "1506b833-e80f-4289-a1dc-e9cf1aae5c0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Gym version v0.24.0 has a number of critical issues with `gym.make` such that the `reset` and `step` functions are called before returning the environment. It is recommend to downgrading to v0.23.1 or upgrading to v0.25.1\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 2,
    "id": "0bc37888-0173-4cfc-8a7a-4d3634accc79",
    "metadata": {},
    "outputs": [],
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 4,
    "id": "2ee5e90d-40a1-4df9-9726-d4913c2004ac",
    "metadata": {},
    "outputs": [],
@@ -138,9 +146,9 @@
     "            self.state[1] = min(self.gridsize[1] - 1, self.state[1] + 1)\n",
     "                \n",
     "        # Compute reward and check if episode ends\n",
-    "        reward = self.compute_reward()\n",
+    "        reward, done = self.compute_reward()\n",
     "        \n",
-    "        return self.state, reward, self.done\n",
+    "        return self.state, reward, done\n",
     "\n",
     "    \n",
     "    def compute_reward(self):\n",
@@ -162,7 +170,6 @@
     "                reward = -10\n",
     "            else:\n",
     "                reward = -50\n",
-    "                self.done = True #Hitting dragon is a terminal state\n",
     "            \n",
     "        elif np.array_equal(self.state, self.ladder_position):\n",
     "            if self.ladder_pickup == False:\n",
@@ -171,7 +178,7 @@
     "        else: \n",
     "            reward = -1  #penalise if step taken with no win\n",
     "\n",
-    "        return reward\n",
+    "        return reward, self.done\n",
     "\n",
     "\n",
     "    def render(self, mode='human'):\n",
@@ -216,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 5,
    "id": "9c81269a-94af-4baa-bcf4-3fa4fd28ce17",
    "metadata": {},
    "outputs": [],
@@ -239,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 6,
    "id": "a499a9d6-dd00-47fe-9646-14c5736ca3ed",
    "metadata": {},
    "outputs": [],
@@ -248,7 +255,7 @@
     "    return state[0] * width + state[1]\n",
     "\n",
     "# Q-learning function \n",
-    "def q_learning(env, alpha, gamma, epsilon, max_epsilon, epsilon_decay, min_epsilon, episodes):\n",
+    "def q_learning(env, alpha, gamma, epsilon, epsilon_decay, min_epsilon, episodes, total_reward):\n",
     "    \n",
     "    # Initialize Q-table with shape (36, 4) = (state, action)\n",
     "    q_table = np.zeros((env.gridsize[0] * env.gridsize[1], env.action_space.n))\n",
@@ -264,104 +271,110 @@
     "        while not done:\n",
     "            \n",
     "            # Choose action based on epsilon-greedy strategy\n",
-    "            #max = q_table[state]\n",
-    "            #print(state)\n",
-    "            #print(q_table[state])\n",
-    "            \n",
     "            action = epsilon_greedy_policy(q_table, state, epsilon, env.gridsize[1])\n",
-    "            \n",
-    "            #print(np.max(action))\n",
-    "            #print(np.shape(action))\n",
-    "            \n",
+    "\n",
     "            # Take the action and observe the result\n",
     "            next_state, reward, done = env.step(action)\n",
-    "            next_state = (next_state)\n",
+    "            \n",
     "            # Convert next state to index\n",
     "            next_state_index = state_to_index(next_state, env.gridsize[1])  \n",
-    "            #print(q_table[next_state])\n",
     "            \n",
     "            # Update Q-table based on the Q-learning formula\n",
     "            q_table[state_index, action] += alpha * (reward + gamma * np.max(q_table[next_state_index]) - q_table[state_index, action])\n",
-    "            #print(q_table)\n",
-    "            #print(np.shape(q_table)[1])\n",
+    "\n",
     "            # Move to the next state\n",
     "            state = next_state\n",
     "            # Update the state index\n",
-    "            state_index = next_state_index  \n",
-    "        \n",
+    "            state_index = next_state_index \n",
+    "            #env.render_2()\n",
+    "\n",
+    "            # Add up reward\n",
+    "            total_reward +=reward\n",
+    "\n",
+    "            #print (done)\n",
+    "            \n",
     "        # Decay epsilon to reduce exploration over time\n",
     "        #epsilon = min_epsilon + (max_epsilon - min_epsilon)*np.exp(-epsilon_decay*episodes)\n",
     "        epsilon = max(min_epsilon, epsilon * epsilon_decay)\n",
-    "  \n",
-    "    return q_table"
+    "        \n",
+    "    return q_table, total_reward\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
-   "id": "fb20d785-c0a6-499b-94d0-bf2cf6062e42",
+   "execution_count": null,
+   "id": "5138f469-5952-4e8f-9410-996447eee3d7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_ _ _ _ _ _ \n",
-      "M L _ _ _ _ \n",
-      "_ _ _ _ _ _ \n",
-      "_ _ D _ _ _ \n",
-      "_ _ _ _ P W \n",
-      "_ _ _ _ _ _ \n",
-      "\n",
-      "\n",
-      "Trained Q-Table:\n",
-      "[[-1.00000000e-01 -1.00000000e-01 -1.00000000e-01  3.46179080e+00]\n",
-      " [-1.00000000e-01  6.02524313e+01  0.00000000e+00  0.00000000e+00]\n",
-      " [-1.00000000e-01 -1.00000000e-01  1.57132957e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [-1.90000000e-01 -6.53271998e-02  2.84212747e+01  2.90718907e+02]\n",
-      " [ 3.05000000e-01  4.12700733e+00  2.64079197e+02 -1.90000000e-01]\n",
-      " [-1.90000000e-01 -1.00000000e-01  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [-1.00000000e-01 -1.00000000e-01 -1.00000000e-01  7.79727608e+00]\n",
-      " [ 8.13715628e+01  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00 -5.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [-1.00000000e-01  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "min_epsilon = 0.05\n",
-    "max_epsilon = 1.0\n",
-    "epsilon_decay=0.0995\n",
-    "epsilon = 0.1\n",
+    "alpha=0.9\n",
+    "gamma=0.95\n",
+    "epsilon = 1.0\n",
+    "epsilon_decay=0.995\n",
+    "min_epsilon = 0.4\n",
+    "episodes=1\n",
+    "total_reward = 0\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    env = gridEnv()\n",
+    "    # Start with new environment\n",
+    "    state = env.reset()\n",
+    "    # Show the environment\n",
+    "    env.render_2()\n",
+    "    q_table, total_reward = q_learning(env,alpha, gamma, epsilon, epsilon_decay, min_epsilon, episodes, total_reward)\n",
+    "    print()\n",
+    "    print(\"Trained Q-Table:\", q_table, '\\n total reward: ', total_reward)\n",
+    "    #print(q_table)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "052b6f05-6a7a-4fa3-b10b-326eedba42cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(q_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4d69d50-2684-4929-83a9-14d36e27ad05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "alpha=0.1\n",
     "gamma=0.99 \n",
+    "tau = 1.0 \n",
     "episodes=1\n",
+    "\n",
+    "\n",
+    "# Define softmax function \n",
+    "def softmax(qvalue, tau):\n",
+    "    exp_qvalue = np.exp(qvalue / tau)\n",
+    "    return exp_qvalue / np.sum(exp_qvalue)\n",
+    "    \n",
+    "for episode in range(episodes):\n",
+    "    state = env.reset()\n",
+    "    done = False\n",
+    "    \n",
+    "    while not done:\n",
+    "        # Determine probabilities for each action at a given state \n",
+    "        action_probability = softmax(q_table[state], tau)\n",
+    "        \n",
+    "        # Pick action randomly from action space with probabilities from softmax \n",
+    "        # This ensures it will explore but the highest Q-value will have highest probs. \n",
+    "        action = np.random.choice(np.arrange(env.action_space.n), p=action_probability)\n",
+    "        \n",
+    "        next_state, reward, done = env.step(action)\n",
+    "        \n",
+    "        # Update q_table\n",
+    "        q_table[state, action] += alpha * (reward + gamma * (np.max(q_table[next_state])) - q_table[state, action])\n",
+    "        \n",
+    "        state = next_state\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    env = gridEnv()\n",
@@ -370,66 +383,108 @@
     "    q_table = q_learning(env,alpha, gamma, epsilon, max_epsilon, epsilon_decay, min_epsilon, episodes)\n",
     "    print()\n",
     "    print(\"Trained Q-Table:\")\n",
-    "    print(q_table)\n"
+    "    print(q_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a41664c6-0d0e-4591-b027-3eb45020ddd3",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Pygame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
-   "id": "052b6f05-6a7a-4fa3-b10b-326eedba42cf",
+   "execution_count": null,
+   "id": "b3bf304b-53d7-48c6-8f22-e09bde18e56c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-1.00000000e-01 -1.00000000e-01 -1.00000000e-01  3.46179080e+00]\n",
-      " [-1.00000000e-01  6.02524313e+01  0.00000000e+00  0.00000000e+00]\n",
-      " [-1.00000000e-01 -1.00000000e-01  1.57132957e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [-1.90000000e-01 -6.53271998e-02  2.84212747e+01  2.90718907e+02]\n",
-      " [ 3.05000000e-01  4.12700733e+00  2.64079197e+02 -1.90000000e-01]\n",
-      " [-1.90000000e-01 -1.00000000e-01  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [-1.00000000e-01 -1.00000000e-01 -1.00000000e-01  7.79727608e+00]\n",
-      " [ 8.13715628e+01  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00 -5.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [-1.00000000e-01  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(q_table)"
+    "pip install pygame"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6b7ba6bb-99bb-4aa2-b910-329a504cdaf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pygame\n",
+    "import sys\n",
+    "\n",
+    "# --- Settings ---\n",
+    "GRID_SIZE = 6\n",
+    "CELL_SIZE = 80\n",
+    "WIDTH, HEIGHT = GRID_SIZE * CELL_SIZE, GRID_SIZE * CELL_SIZE\n",
+    "FPS = 60\n",
+    "\n",
+    "# Colors\n",
+    "WHITE = (255, 255, 255)\n",
+    "GRAY = (200, 200, 200)\n",
+    "\n",
+    "# Initialize pygame\n",
+    "pygame.init()\n",
+    "screen = pygame.display.set_mode((WIDTH, HEIGHT))\n",
+    "pygame.display.set_caption(\"Mario GridWorld\")\n",
+    "clock = pygame.time.Clock()\n",
+    "\n",
+    "# Load Mario icon\n",
+    "mario_img = pygame.image.load(\"mario.png\")\n",
+    "mario_img = pygame.transform.scale(mario_img, (CELL_SIZE, CELL_SIZE))\n",
+    "\n",
+    "# Agent's initial position\n",
+    "agent_pos = [0, 0]  # [row, col]\n",
+    "\n",
+    "def draw_grid():\n",
+    "    for x in range(0, WIDTH, CELL_SIZE):\n",
+    "        for y in range(0, HEIGHT, CELL_SIZE):\n",
+    "            rect = pygame.Rect(x, y, CELL_SIZE, CELL_SIZE)\n",
+    "            pygame.draw.rect(screen, GRAY, rect, 1)\n",
+    "\n",
+    "def draw_agent():\n",
+    "    row, col = agent_pos\n",
+    "    x = col * CELL_SIZE\n",
+    "    y = row * CELL_SIZE\n",
+    "    screen.blit(mario_img, (x, y))\n",
+    "\n",
+    "# --- Game loop ---\n",
+    "running = True\n",
+    "while running:\n",
+    "    clock.tick(FPS)\n",
+    "    screen.fill(WHITE)\n",
+    "\n",
+    "    # Handle events\n",
+    "    for event in pygame.event.get():\n",
+    "        if event.type == pygame.QUIT:\n",
+    "            running = False\n",
+    "\n",
+    "        elif event.type == pygame.KEYDOWN:\n",
+    "            if event.key == pygame.K_UP and agent_pos[0] > 0:\n",
+    "                agent_pos[0] -= 1\n",
+    "            elif event.key == pygame.K_DOWN and agent_pos[0] < GRID_SIZE - 1:\n",
+    "                agent_pos[0] += 1\n",
+    "            elif event.key == pygame.K_LEFT and agent_pos[1] > 0:\n",
+    "                agent_pos[1] -= 1\n",
+    "            elif event.key == pygame.K_RIGHT and agent_pos[1] < GRID_SIZE - 1:\n",
+    "                agent_pos[1] += 1\n",
+    "\n",
+    "    # Draw\n",
+    "    draw_grid()\n",
+    "    draw_agent()\n",
+    "    pygame.display.flip()\n",
+    "\n",
+    "pygame.quit()\n",
+    "sys.exit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b8c7330-8bcf-4d5d-a414-69d5e5978b6b",
    "metadata": {},
    "outputs": [],
    "source": []
