--- a/Thi_Ngo_Individual_tasks/Atari_DQN.ipynb
+++ b/Thi_Ngo_Individual_tasks/Atari_DQN.ipynb
@@ -26,29 +26,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7tslIaC0STmy",
-        "outputId": "0db42ed6-2cc1-499c-d2d9-62aed9b4b888"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "/bin/bash: line 1: AutoROM: command not found\n"
-          ]
-        }
-      ],
-      "source": [
-        "!AutoROM --accept-license"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
@@ -1146,6 +1123,41 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "count    400.000000\n",
+              "mean     -17.908176\n",
+              "std        1.143420\n",
+              "min      -21.000000\n",
+              "25%      -18.425926\n",
+              "50%      -17.959881\n",
+              "75%      -16.800000\n",
+              "max      -16.380000\n",
+              "Name: 0, dtype: float64"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "rewards['0'].describe()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -1155,11 +1167,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.6"
     }
   },
   "nbformat": 4,
